--- a/Ardroid-Core/src/main/res/values/strings_activity_main.xml
+++ b/Ardroid-Core/src/main/res/values/strings_activity_main.xml
@@ -6,6 +6,7 @@
     <string name="prompt_password">Password</string>
 
     <string name="load_data">click to load data</string>
+    <string name="stop_loading">click to stop loading</string>
     <string name="action_sign_in_short">Sign in</string>
 
     <string name="action_forgot_password">Recover lost password</string>
