--- a/Ardroid-Core/src/main/res/layout/activity_main.xml
+++ b/Ardroid-Core/src/main/res/layout/activity_main.xml
@@ -2,42 +2,38 @@
        xmlns:tools="http://schemas.android.com/tools"
        tools:context=".MainActivity">
 
-    <ScrollView
-            android:id="@+id/login_form"
+    <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"
+            android:background="@android:color/black"
+            android:orientation="vertical">
+        <FrameLayout
+                android:id="@+id/chart_container"
+                android:layout_height="0dp"
+                android:layout_weight="100"
+                android:layout_width="match_parent"/>
 
-        <LinearLayout
-                style="@style/LoginFormContainer"
-                android:orientation="vertical">
+        <Button
+                android:id="@+id/load_button"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:layout_weight="1"
+                android:text="@string/load_data"
+                android:paddingLeft="32dp"
+                android:paddingRight="32dp"
+                />
 
-            <Button
-                    android:id="@+id/load_button"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="10dp"
-                    android:text="@string/load_data"
-                    android:paddingLeft="32dp"
-                    android:paddingRight="32dp"
-                    />
-            <Button
-                    android:id="@+id/stop_button"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="10dp"
-                    android:text="@string/stop_loading"
-                    android:visibility="gone"
-                    android:paddingLeft="32dp"
-                    android:paddingRight="32dp"
-                    />
-
-            <TextView
-                    android:layout_marginTop="10dp"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:id="@+id/data_field"
-                    />
-        </LinearLayout>
-
-    </ScrollView>
+        <Button
+                android:id="@+id/stop_button"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:layout_weight="1"
+                android:text="@string/stop_loading"
+                android:visibility="gone"
+                android:paddingLeft="32dp"
+                android:paddingRight="32dp"
+                />
+    </LinearLayout>
 </merge>
